--- a/res/layout/activity_alert.xml
+++ b/res/layout/activity_alert.xml
@@ -46,10 +46,11 @@
 
     <ProgressBar
         android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
-        android:layout_marginLeft="30dp"        
+        android:layout_marginLeft="65dp"        
 
         android:layout_alignParentTop="true" />
 
