--- a/res/layout/fragment_change_number.xml
+++ b/res/layout/fragment_change_number.xml
@@ -35,7 +35,7 @@
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp"
-        android:text="Current Number : 9421315125"
+        android:text=""
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
